Updated index.html and created cities.html

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
   </head>
   <style>
     #my-header {
-      background-color: rgb(184, 175, 166);
-      color: hsl(114, 77%, 44%);
-      padding: 40px
+      background-color: rgb(230, 204, 178);
+      color: hsl(24, 38%, 36%);
+      padding: 40px;
       text-align: center;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
   </style>
-  <body>
-    
+  <body style="background-color: #DDB892;">
+    <h1 id="my-header">The Importance of Exercise</h1>
+    <p style="background-color: #EDE0D4; color: #7F5539; font-family: Verdana, Geneva, Tahoma, sans-serif; padding: 10px;">In today's world, owing to increased time spent on technology, both for work and play, the critical importance of physical activity has been overlooked. This poses a problem to the health of the population. It is important to take some time to maintain your health when you can. Below is a chart showing some easy exercises that can be done anywhere.</p>
+    <img src="./images/exercises.jpg" alt="Chart of exercises that can be done anywhere!" width="436" height="600">
+    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; background-color: #EDE0D4; padding: 10px;">
+      <a href="./cities.html">My Cities Page</a>
+    </p>
   </body>
 </html>     
