--- a/cities.html
+++ b/cities.html
@@ -38,15 +38,15 @@
 
     <h2 class="city">Athens</h2>
     <p style="color: #F2E9E4; background-color: #22223B; padding: 5px;">Athens is the capital of Greece, and it is one of the most historically significant cities in the world. Athens is known as the birthplace of democracy and home to some of the most significant philosophers, is still dominated by 5th-century BC landmarks, including the Acropolis.</p>
-    <img src="./images/greeceflag.webp">
+    <img src="./images/greeceflag.webp" alt="Flag of Greece.">
 
     <h2 class="city">Cairo</h2>
     <p style="color: #F2E9E4; background-color: #22223B; padding: 5px;">Cairo is the capital of Egypt, and one of the largest and oldest cities in Africa, having stood for more than 1,000 years on the banks of the Nile. Just outside the city, people can visit Giza, the site of the iconic pyramids and Great Sphinx, dating back to the 26th century BC.</p>
-    <img src="./images/egyptflag.webp">
+    <img src="./images/egyptflag.webp" alt="Flag of Egypt.">
 
     <h2 class="city">Beijing</h2>
     <p style="color: #F2E9E4; background-color: #22223B; padding: 5px;">Beijing is the capital of China, and despite being a modern metropolis known for its cutting-edge technology, it has history stretching back 3 millennia. In addition to skyscrapers, ancient sites such as the grand Forbidden City complex, which was the imperial palace during the Ming and Qing dynasties, can be found all over the city.</p>
-    <img src="./images/chinaflag.webp">
+    <img src="./images/chinaflag.webp" alt="Flag of China.">
 
   </body>
 </html>
