Fixed errors in cities.html

--- a/cities.html
+++ b/cities.html
@@ -12,7 +12,7 @@
 
   <style>
     /* Style the element with id "my-header" */ 
-    #myHeader {
+    #my-header {
      background-color: rgb(34, 34, 59);
       color: hsl(21, 35%, 92%);
       padding: 40px;
@@ -31,7 +31,7 @@
   
   <body style="background-color: #9A8C98;">
      <!-- An element with a unique id -->
-    <h1 id="myHeader">Capital Cities of the World!</h1>
+    <h1 id="my-header">Capital Cities of the World!</h1>
 
     <!--Multiple elements with the same class -->
     <h2 class="city">Washington, D.C.</h2>
