--- a/cities.html
+++ b/cities.html
@@ -3,7 +3,7 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="My second web page with propre style">
+    <meta name="description" content="My second webpage, with proper style">
     <meta name="keyword" content="Immaculata, ICS20">
     <meta name="author" content="Ben Thomson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
   <style>
     /* Style the element with id "my-header" */ 
     #my-header {
-     background-color: rgb(34, 34, 59);
+      background-color: rgb(34, 34, 59);
       color: hsl(21, 35%, 92%);
       padding: 40px;
       text-align: center;
@@ -22,9 +22,9 @@
 
     /* Style all elements with the class name "city" */ 
     .city {
-    background-color: #C9ADA7;
-    color: #4A4E69;
-    padding: 10px;
+      background-color: #C9ADA7;
+      color: #4A4E69;
+      padding: 10px;
       font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
   </style>
@@ -39,7 +39,7 @@
     <img src="./images/USAflag.webp" alt="Flag of the USA.">
 
     <h2 class="city">Athens</h2>
-    <p style="color: #F2E9E4; background-color: #22223B; padding: 5px; font-family: Verdana, Geneva, Tahoma, sans-serif;">Athens is the capital of Greece, and it is one of the most historically significant cities in the world. Athens is known as the birthplace of democracy and home to some of the most significant philosophers, is still dominated by 5th-century BC landmarks, including the Acropolis.</p>
+    <p style="color: #F2E9E4; background-color: #22223B; padding: 5px; font-family: Verdana, Geneva, Tahoma, sans-serif;">Athens is the capital of Greece, and it is one of the most historically significant cities in the world. Athens is known as the birthplace of democracy and home to some of the most significant philosophers. It is still dominated by 5th-century BC landmarks, including the Acropolis.</p>
     <img src="./images/greeceflag.webp" alt="Flag of Greece.">
 
     <h2 class="city">Cairo</h2>
